--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle}"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle}"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    //Shimmer efect
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+
+    //coil
+    implementation("io.coil-kt:coil:1.1.1")
 }
