--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,15 +67,12 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
-    // Fragment / viewmodel / hilt
+    // Fragment / Viewmodel / Hilt
     def lifecycle = "2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle}"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle}"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
-    //Shimmer efect
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-
-    //coil
+    //Coil
     implementation("io.coil-kt:coil:1.1.1")
 }
